# dcmntscnnr

./: CMakeLists.txt  README.md  main.cpp
lib/: image-cropper.cpp  image-cropper.hpp  image-previewer.cpp  image-previewer.hpp  image-sorter.cpp  image-sorter.hpp  image.cpp  image.hpp
